--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,14 +8,14 @@
         <%- include('partials/header') %>
 
             <section class="searchingContainer">
-
+<div class="frontPage">
                 <img class="logoSearch" src="/images/logo/logoprueba.jpg" alt="logo">
 
                 <form action="submit" class="searchForm">
                     <input class="searchFormInput" type="text" placeholder="Que estas Buscando ...?">
                     <button class="searchFormButton"> Buscar </button>
                 </form>
-
+            </div>
                 <div class="menuSearchContainer">
 
                     <div class="productsCategories">
@@ -25,7 +25,7 @@
                                 <ul>
                                     <li><a href="/products/categories">Categorias</a></li>
                                     <li><a href="#">Gadgets</a></li>
-                                    <li><a href="#">Computadores</a></li>
+                                    <li><a href="#">Cargadores</a></li>
                                     <li><a href="#">Accesorios</a></li>
                                 </ul>
                             </li>
@@ -41,9 +41,6 @@
                         </ul>
                     </div>
                 </div>
-
-                <br>
-                <br>
 
                 <section class="filtersBrandscontainer">
                     <div class="brandImages">
@@ -101,7 +98,7 @@
 
 
                 <div class="payments">
-                    <h3>Metodos de pago</h3>
+                    <h3 class="paymentsTittle">Metodos de pago</h3>
                     <img src="/images/logo/medios.jpg" alt="hilera tablero de pagos">
                 </div>
 
