--- a/src/public/css/loginRegister.css
+++ b/src/public/css/loginRegister.css
@@ -53,6 +53,7 @@ input::placeholder {
     align-items: center;
     width: 100%;
     height: 500px;
+    justify-content: center;
 
    
   }
@@ -120,7 +121,6 @@ input::placeholder {
 .user_options-forms {
     position: absolute;
     top: 50%;
-    left: 30px;
     width: calc(55% - 30px);
     min-height: 470px;
     background-color: #fff;
