--- a/src/public/css/queries.css
+++ b/src/public/css/queries.css
@@ -20,29 +20,30 @@
 @media (min-width: 650px) {
 
 
-    .menu {
-        display: flex;
+    nav img {
+        display: block !important;
     }
 
-    .fa-bars, .hiddenIcons {
+    .fa-bars,
+    .hiddenIcons {
         display: none !important;
     }
 
     nav .menuProfileContainer {
         margin-right: 50px;
         display: flex !important;
-        
+
     }
 
 
     nav {
         flex-direction: row !important;
-        justify-content: space-between !important; 
+        justify-content: space-between !important;
     }
 
     nav img {
         margin-bottom: 0px;
-      }
+    }
 
     .loginIcon {
         position: absolute;
@@ -80,11 +81,11 @@
 
 /* Tablet queries ---------- */
 
-@media (min-width: 769px) {
+@media (min-width: 768px) {
 
     .menu-nav i {
         display: block !important;
-      }
+    }
 
 
     .brandImages img {
@@ -96,6 +97,50 @@
         margin-right: 20px;
     }
 
+    .productImg {
+        width: 422px !important;
+    }
+
+    #iconShopping {
+        right: -52% !important;
+    }
+
+    .InfoDetailed {
+        display: flex;
+        justify-content: flex-end;
+        text-align: center;
+    }
+
+    .InfoDetailed p {
+        color: gainsboro;
+    }
+
+    .productList {
+        width: 33%;
+    }
+
+    .wholeInfo {
+        font-size: 18px;
+        background: url("/images/background/back.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-blend-mode: unset;
+        box-shadow: inset 0px 13px 20px 3px rgba(2, 2, 2, 0.50);
+    }
+
+    .ProductsDetailsContainer h4 {
+        padding: 25px !important;
+    }
+
+    .fa-cart-shopping {
+        font-size: 28px !important;
+        padding: 11px !important;
+        width: 56px !important;
+        height: 51px !important;
+        right: -10px !important;
+        top: -15px !important;
+    }
+
     .carousel,
     .carouselTwo,
     .carouselThree {
@@ -105,8 +150,16 @@
     .trending,
     .trendingTwo,
     .trendingThree {
-        width: calc(92% / 5);
+        width: calc(97% / 3) !important;
         text-align: center;
+    }
+
+    .trending img,
+    .trendingTwo img,
+    .trendingThree img {
+        width: 186px !important;
+        height: 200px !important;
+        border: none;
     }
 
     #prev,
@@ -153,8 +206,24 @@
 
 /* ---------------desktop queries---------------- */
 
-@media (min-width: 858px) {
+@media (min-width: 1024px) {
 
+    .menuSearchContainer ul li {
+        height: 43px;
+        margin: 10px 0;
+    }
+
+    .productList {
+        width: 25%;
+    }
+
+    #iconShopping {
+        right: -41% !important;
+    }
+
+    .wholeInfo {
+        font-size: 25px;
+    }
 
     .brandImages img {
         width: 100px;
@@ -168,15 +237,16 @@
     }
 
     .carouselTitle {
-        height: 85px;
+        height: 60px !important;
+        padding: 9px;
     }
 
     .trending,
     .trendingTwo,
     .trendingThree {
-        width: calc(97% / 5);
-        text-align: center;
-        font-size: 20px;
+        width: calc(73% / 3) !important;
+        padding: 2rem !important;
+        box-shadow: inset 0px 1px 5px 0px rgba(2, 2, 2, 0.50);
     }
 
     .trending p,
@@ -186,13 +256,7 @@
 
     }
 
-    .trending img,
-    .trendingTwo img,
-    .trendingThree img {
-        width: 110px;
-        height: 120px;
-        border: none;
-    }
+    
 
     .trending h3,
     .trendingTwo h3,
@@ -255,4 +319,12 @@
     .detailsContainer {
         margin-top: 8%;
     }
+}
+
+@media (min-width: 1440px) {
+
+    #iconShopping {
+        right: -29% !important;
+    }
+
 }
