--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,7 +7,7 @@
                     <div class="hiddenIcons" id="hiddenIcons">
                         <a href="/" class="smallIcons"> <i class="fa-sharp fa-solid fa-house"></i>
                         <a class="smallIcons"><i class="fa-solid fa-globe"></i>
-                        <a href="/shoppingCar" class="smallIcons"> <i class="fa-solid fa-cart-shopping"></i>
+                        <a href="/shoppingCar" class="smallIcons"><i class="fa-solid fa-bag-shopping"></i>
                             <% if (locals.userLogged) { %>
                         <a href="#" class="smallIcons"> <i class="fa-solid fa-star"></i>
                         <a class="smallIcons"> <i class="fa-solid fa-flag"></i>
@@ -26,7 +26,7 @@
             <a class="menu-nav"><i class="fa-solid fa-globe"></i>
                 <p>Sobre nosotros</p>
             </a>
-            <a href="/shoppingCar" class="menu-nav"> <i class="fa-solid fa-cart-shopping"></i>
+            <a href="/shoppingCar" class="menu-nav"> <i class="fa-solid fa-bag-shopping"></i>
                 <p>Mis compras</p>
             </a>
             <% if (locals.userLogged) { %>
