--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -12,7 +12,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-blend-mode: unset;
-  box-shadow: inset 0px 13px 20px 3px rgba(2, 2, 2, 0.50);
+  box-shadow: inset 0px 1px 20px 0px rgba(2, 2, 2, 0.50);
 }
 
 .smallScreen {
@@ -25,8 +25,8 @@ body {
   width: 33px;
   margin: 10px 0px;
   height: 34px;
-  background-color: palevioletred;
-  box-shadow: inset -1px 1px 20px 0px rgba(2, 2, 2, 0.50);
+  background-color: hotpink;
+  box-shadow: inset 5px -5px 20px 0px rgba(2, 2, 2, 0.50);
   border: none;
   border-radius: 10px;
   color: white;
@@ -35,8 +35,8 @@ body {
 
 .hiddenIcons {
   height: 5%;
-  background-color: palevioletred;
-  box-shadow: 2px 0 25px rgba(2, 2, 2, 0.50);
+  background-color: hotpink;
+  box-shadow: inset 5px -5px 20px 0px rgba(2, 2, 2, 0.50);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
