--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -18,8 +18,12 @@ html {
     background: palevioletred;
     font-size: 22px;
     margin-top: 10px;
-    box-shadow: inset 0px 13px 20px 3px rgba(2, 2, 2, 0.50);
+    box-shadow: inset -1px -12px 8px 0px rgba(2, 2, 2, 0.50);
+}
 
+
+.productImgDescription {
+    background-color: white;
 }
 
 .productList {
@@ -27,6 +31,9 @@ html {
     height: 13%;
     display: flex;
     justify-content: center;
+    box-shadow: inset 3px -2px 11px 4px rgba(2, 2, 2, 0.50);
+    background-color: white;
+    padding: 2%;
 }
 
 .ProductsDetailsContainer h4{
@@ -41,7 +48,7 @@ html {
     margin: 15px;
     flex: 0 0 80%;
     overflow: hidden;
-    box-shadow: inset -2px -2px 20px 0px rgba(2, 2, 2, 0.50);
+    text-align: center;
 }
 
 
@@ -105,25 +112,27 @@ html {
 #buttonAdm {
     height: 36px;
     padding: 0px 10px;
-    background-color: palevioletred;
+    background-color: hotpink;
+    box-shadow: inset 5px -5px 20px 0px rgba(2, 2, 2, 0.50);
     border: none;
     border-radius: 15px;
     color: rgb(255, 255, 255);
     font-family: Montserrat, sans-serif;
     position: relative;
-    right: -104px;
+    right: -33%;
     margin-top: 14px;
 }
 
 .productButtons {
     height: 36px;
     padding: 0px 10px;
-    background-color: palevioletred;
+    background-color: hotpink;
+  box-shadow: inset 5px -5px 20px 0px rgba(2, 2, 2, 0.50);
     border: none;
     border-radius: 15px;
     color: rgb(255, 255, 255);
     font-family: Montserrat, sans-serif;
-    text-align: 12px;
+    
 
 }
 
@@ -142,6 +151,7 @@ html {
 
 #iconShopping {
     position: relative;
+    border: none;
     top: 43px;
     right: -46%;
 }
