--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -174,3 +174,75 @@ html {
 .productButtons:hover {
     background-color: rgba(2, 2, 2, 0.50)
 }
+
+/* Crear productos  */
+
+.creationsContainer{
+    background-color: white;
+    box-shadow: inset -1px 8px 20px 12px rgba(2, 2, 2, 0.50);
+}
+
+
+.createForm{
+    background: url("/images/background/back.jpg");
+    background-repeat: round;
+    background-size: cover;
+    background-blend-mode: unset;
+    box-shadow: inset 0px 9px 20px 0px rgba(2, 2, 2, 0.50);
+    margin: 3%;
+    padding: 3%;
+    text-align: center;
+    margin-bottom: 3%;
+}
+
+.createForm label{
+    
+}
+
+.createForm input, textarea{
+    width: 92%;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    height: 25px;
+    padding: 0px 25px;
+    font-size: 1rem;
+    margin-bottom: 4%;
+    text-align: center;
+    
+}
+
+.createForm select{
+    width: 55%;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    height: 38px;
+    padding: 0px 21px;
+    font-size: 1rem;
+    margin-bottom: 4%;
+}
+
+
+
+.stateProduct{
+    display: flex;
+    align-items: center;
+}
+
+.boxButtonCreate {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buttonsCreate{
+    height: 36px;
+    padding: 0px 10px;
+    background-color: hotpink;
+    box-shadow: inset 5px -5px 20px 0px rgba(2, 2, 2, 0.50);
+    border: none;
+    border-radius: 15px;
+    color: rgb(255, 255, 255);
+    font-family: Montserrat, sans-serif;
+}
